...
                          Color.fromRGBO(77, 151, 203, 1)
                        ])),
                  ),
                  bottom:
                      TabBar(key: Key('SearchTab'), indicatorWeight: 3, tabs: [
                    tabBarTitles("ANIMAL", context),
                    tabBarTitles("SPECIES", context),
                  ]),
                ),
                body: internetError(snapshot.error.toString()),
              );
            }
            if (snapshot.hasData) {
...
                  if (Navigator.canPop(context)) {
                    navigate(context);
                  }
                  return;
                },
                child: DefaultTabController(
                    key: Key('DefaultTabController'),
                    length: 2,
                    child: Scaffold(
                      drawer: NavDrawer(),
                      appBar: AppBar(
                        leading: Builder(
                          builder: (BuildContext context) {
...
                      fit: BoxFit.fill,
                      image: AssetImage('assets/images/ERP_Tech.png'))),
              child: null,
            ),
            ListTile(
                leading: Icon(Icons.home),
                title: text16LeftBoldGrey("Home"),
                dense: true,
                onTap: () => {navigateToHomeView(context)}),
            ListTile(
                leading: Icon(Icons.account_circle),
                title: text16LeftBoldGrey("Profile"),
                dense: true,
                onTap: () => {navigateToProfile(context)}),
            ListTile(
                leading: Icon(Icons.verified_user),
                title: text16LeftBoldGrey("Achievements"),
                dense: true,
                onTap: () => {navigateToAchievements()}),
            ListTile(
                leading: Icon(Icons.exit_to_app),
                dense: true,
                title: text16LeftBoldGrey("Logout"),
...
  List<SearchModel> animalList;
  ListBody({Key key, this.animalList}) : super(reactive: true);

  @override
  Widget build(BuildContext context, SearchViewModel model) {
    return ListView.builder(
        key: Key('ListAnimals'),
        itemCount: animalList.length,
        itemBuilder: (context, index) {
          return animalList[index].image == ""
              ? Container(
                  margin: new EdgeInsets.only(left: 30, top: 17, bottom: 10),
                  child: text16LeftBoldGrey(animalList[index].commonName),
...
