...
                BottomNavigationBarItem(
                  icon: Icon(Icons.home, size: 2,),
                  title: Text('Home'),
                ),
                BottomNavigationBarItem(
                  icon: Icon(Icons.info_outline),
                  title: Text('Animals',),
                ),
                BottomNavigationBarItem(
                  icon: Icon(Icons.person),
                  title: Text('Profile',),
                ),
              ],
...
                BottomNavigationBarItem(
                  icon: Icon(Icons.pets, color: Colors.grey),
                  title: Text('Animals', style: TextStyle(color: Colors.grey)),
                ),
                BottomNavigationBarItem(
                  icon: Icon(Icons.file_upload, color: Colors.grey),
                  title: Text('Upload', style: TextStyle(color: Colors.grey)),
                ),
                BottomNavigationBarItem(
                  icon: Icon(Icons.account_circle, color: Colors.grey),
                  title: Text('Profile', style: TextStyle(color: Colors.grey)),
                )
              ],
...
