...
  @override
  Widget build(BuildContext context, HomeViewModel model) {
    return Container(
      margin: EdgeInsets.all(0),
      padding: EdgeInsets.all(0),
      child: IconButton(
          key: Key('Search'),
          padding: EdgeInsets.all(0),
          icon: Icon(icon, color: Colors.white),
          onPressed: () {
            navigateToSearchView();
          }),
    );
...
}
//========================== APPBAR ICONS =======================

// ignore: must_be_immutable
class HomeListBody extends ViewModelWidget<HomeViewModel> {
  List<HomeModel> animalList;
  HomeListBody({Key key, this.animalList}) : super(reactive: true);

  @override
  Widget build(BuildContext context, HomeViewModel model) {
    model.getRecentIdentifications();
    return ListView.builder(
        key: Key('HomeListBody'),
...
